--- a/cv/index.html
+++ b/cv/index.html
@@ -5,7 +5,7 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <title>cv | Emmanouil Kariotakis</title>
+    <title>CV | Emmanouil Kariotakis</title>
     <meta name="author" content="Emmanouil Kariotakis" />
     <meta name="description"
         content="A simple, whitespace theme for academics. Based on [*folio](https://github.com/bogoli/-folio) design. " />
@@ -49,8 +49,8 @@
                         <!-- <li class="nav-item "> <a class="nav-link" href="/blog/">blog</a> </li> -->
                         <!-- <li class="nav-item "> <a class="nav-link" href="/projects/">projects</a> </li> -->
                         <!-- <li class="nav-item "> <a class="nav-link" href="/repositories/">repositories</a> </li> -->
-                        <li class="nav-item "> <a class="nav-link" href="/cv/">cv</a> </li>
-                        <li class="nav-item "> <a class="nav-link" href="/publications/">publications</a> </li>
+                        <li class="nav-item "> <a class="nav-link" href="/cv/">CV</a> </li>
+                        <li class="nav-item "> <a class="nav-link" href="/publications/">Publications</a> </li>
                         <!-- <li class="nav-item "> <a class="nav-link" href="/teaching/">teaching</a> </li> -->
                         <!-- <li class="nav-item dropdown "> <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown"
                                 role="button" data-toggle="dropdown" aria-haspopup="true"
