--- a/index.html
+++ b/index.html
@@ -84,8 +84,8 @@
                             </source>
                             <source class="responsive-img-srcset" media="(max-width: 1400px)"
                                 srcset="/assets/img/prof_pic-1400.webp"> -->
-                            </source> <img src="/assets/img/sherlock_face.jpg" class="img-fluid z-depth-1 rounded-circle"
-                                width="auto" height="auto" alt="sherlock_face.jpg"
+                            </source> <img src="/assets/img/me.jpeg" class="img-fluid z-depth-1 rounded-circle"
+                                width="auto" height="auto" alt="me.jpeg"
                                 onerror="this.onerror=null; $('.responsive-img-srcset').remove();">
                         </picture>
                     </figure>
