--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
                         </picture>
                     </figure>
                     <div class="address">
-                        <p>STADIUS - Office 106</p>
+                        <p>STADIUS</p>
                         <p>Kasteelpark Arenberg 10</p>
                         <p>3001 Leuven</p>
                     </div>
