--- a/publications/index.html
+++ b/publications/index.html
@@ -51,6 +51,7 @@
               <li class="nav-item "> <a class="nav-link" href="/cv/">CV</a> </li>
               <li class="nav-item "> <a class="nav-link" href="/publications/">Publications</a> </li>
               <!-- <li class="nav-item "> <a class="nav-link" href="/teaching/">teaching</a> </li> -->
+              <li class="nav-item "> <a class="nav-link" href="/contact/">Contact</a> </li>
               <!-- <li class="nav-item dropdown "> <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown"
                       role="button" data-toggle="dropdown" aria-haspopup="true"
                       aria-expanded="false">submenus</a>
