--- a/teaching/index.html
+++ b/teaching/index.html
@@ -5,8 +5,8 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <title>teaching | Konstantinos Kontras</title>
-    <meta name="author" content="Konstantinos Kontras" />
+    <title>teaching | Emmanouil Kariotakis</title>
+    <meta name="author" content="Emmanouil Kariotakis" />
     <meta name="description" content="Materials for courses you taught. Replace this text with your description." />
     <meta name="keywords" content="jekyll, jekyll-theme, academic-website, portfolio-website" />
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.1/dist/css/bootstrap.min.css" rel="stylesheet"
@@ -24,7 +24,7 @@
     <link rel="shortcut icon"
         href="data:image/svg+xml,<svg xmlns=%22http://www.w3.org/2000/svg%22 viewBox=%220 0 100 100%22><text y=%22.9em%22 font-size=%2290%22>⚛️</text></svg>">
     <link rel="stylesheet" href="/assets/css/main.css">
-    <link rel="canonical" href="https://kkontras.github.io/teaching/">
+    <link rel="canonical" href="https://ekariotakis.github.io/teaching/">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/gh/jwarby/jekyll-pygments-themes@master/native.css"
         media="none" id="highlight_theme_dark" />
     <script src="/assets/js/theme.js"></script>
@@ -83,7 +83,7 @@
         </div>
     </div>
     <footer class="fixed-bottom">
-        <div class="container mt-0"> © Copyright 2022 Konstantinos Kontras. Powered by <a href="https://jekyllrb.com/"
+        <div class="container mt-0"> © Copyright 2022 Emmanouil Kariotakis. Powered by <a href="https://jekyllrb.com/"
                 target="_blank" rel="noopener noreferrer">Jekyll</a> with <a
                 href="https://github.com/alshedivat/al-folio" target="_blank" rel="noopener noreferrer">al-folio</a>
             theme. Hosted by <a href="https://pages.github.com/" target="_blank" rel="noopener noreferrer">GitHub
