--- a/cv/index.html
+++ b/cv/index.html
@@ -130,7 +130,7 @@
                                                 class="badge font-weight-bold danger-color-dark text-uppercase align-middle"
                                                 style="min-width: 75px;"> 2017 - 2022 </span> </div>
                                         <div class="col-xs-10 cl-sm-10 col-md-10 mt-2 mt-md-0">
-                                            <h6 class="title font-weight-bold ml-1 ml-md-4">MEng in Electrical and Computer Engineering 
+                                            <h6 class="title font-weight-bold ml-1 ml-md-4">BSc & MEng in Electrical and Computer Engineering 
                                             </h6>
                                             <h6 class="ml-1 ml-md-4" style="font-size: 0.95rem;">Technical University of Crete (TUC), Chania, Greece</h6>
                                             <!-- <ul class="items">
