--- a/index.html
+++ b/index.html
@@ -114,7 +114,7 @@
                             href="https://aritrakonar.github.io/" target="_blank"
                             rel="noopener noreferrer">Prof. Aritra Konar</a>, we are interested in topics related to <b>Graph Mining</b>.</p>
                     <p>Currently, our goal is to find dense subgraphs with fairness related constraints.</p>
-                    <p>Before joining KU Leuven, I was a part of <a
+                    <p>Before joining KU Leuven, I was a member of the <a
                         href="https://spl.ics.forth.gr/" target="_blank"
                         rel="noopener noreferrer">Signal Processing Laboratory</a>                        
                         , in Institue of Computer Science - FORTH, 
