--- a/index.html
+++ b/index.html
@@ -116,8 +116,7 @@
                     <p>Currently, our goal is to find dense subgraphs with fairness related constraints.</p>
                     <p>Before joining KU Leuven, I was a member of the <a
                         href="https://spl.ics.forth.gr/" target="_blank"
-                        rel="noopener noreferrer">Signal Processing Laboratory</a>                        
-                        , in Institue of Computer Science - FORTH, 
+                        rel="noopener noreferrer">Signal Processing Laboratory</a> of Institue of Computer Science - FORTH, 
                         as a research assistant. There, advised by <a
                         href="https://users.ics.forth.gr/~greg/" target="_blank"
                         rel="noopener noreferrer">Prof. Grigorios Tsagkatakis</a>, <a
