--- a/index.html
+++ b/index.html
@@ -103,7 +103,7 @@
                     </div> -->
                 </div>
                 <div class="clearfix"> 
-                    <p>Welcome! I am Manos and a a PhD
+                    <p>Welcome! I am Manos and I am a PhD
                         researcher in <a
                         href="https://www.esat.kuleuven.be/stadius/" target="_blank"
                         rel="noopener noreferrer">STADIUS</a> - <a
