--- a/index.html
+++ b/index.html
@@ -112,8 +112,9 @@
                         href="https://www.kuleuven.be/english/kuleuven/index.html" target="_blank"
                         rel="noopener noreferrer">KU Leuven</a>, in Belgium. Along with my supervisor <a
                             href="https://aritrakonar.github.io/" target="_blank"
-                            rel="noopener noreferrer">Prof. Aritra Konar</a>, we are interested in topics related to <b>Graph Mining</b>.</p>
-                    <p>Currently, our goal is to find dense subgraphs with fairness related constraints.</p>
+                            rel="noopener noreferrer">Prof. Aritra Konar</a>, we are interested in topics related to <b>Graph Machine Learning</b> and <b>Algorithmic Fairness</b>.</p>
+                    <!-- <p>Currently, our goal is to find dense subgraphs with fairness related constraints.</p> -->
+                    <p>Currently, our goal is to explore algorithmic fairness in the densest subgraph problem.</p>
                     <p>Before joining KU Leuven, I was a member of the <a
                         href="https://spl.ics.forth.gr/" target="_blank"
                         rel="noopener noreferrer">Signal Processing Laboratory</a> of Institue of Computer Science - FORTH, 
